log
Sun May 15 16:12:51 UTC 2022: 
 sudoku.c | 44 ++++++++++++++++++++++++++++++++------------
 1 file changed, 32 insertions(+), 12 deletions(-)
 tests:  1|4
total_score: 10/70
afdb066
Sun May 15 16:23:54 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:9: error: unused variable ‘j’ [-Werror=unused-variable]
   int i,j,b,v,p;
         ^
sudoku.c:55:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i,j,b,v,p;
       ^
cc1: all warnings being treated as errors
Compilation failed
2ecd440
Sun May 15 16:24:10 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
3bf82da
Sun May 15 16:36:20 UTC 2022: 
 sudoku.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
13e825e
Sun May 15 17:49:49 UTC 2022: 
 sudoku.c | 54 +++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 37 insertions(+), 17 deletions(-)
 tests:  4|3
total_score: 30/70
2c7341a
Sun May 15 18:16:57 UTC 2022: 
 sudoku.c | 55 ++++++++++++++++++++++++++++++++++++-------------------
 1 file changed, 36 insertions(+), 19 deletions(-)
 tests:  6|2
total_score: 45/70
342fe1b
Sun May 15 18:18:00 UTC 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
8b85a01
Sun May 15 18:32:33 UTC 2022: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  7|2
total_score: 50/70
d2c7108
Sun May 15 18:35:21 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
38b05ea
Sun May 15 18:47:19 UTC 2022: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|2
total_score: 50/70
f40da05
Sun May 15 18:49:42 UTC 2022: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|2
total_score: 50/70
e3eb9b0
Sun May 15 18:59:24 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|2
total_score: 50/70
f965805
Sun May 15 19:00:06 UTC 2022: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  7|2
total_score: 50/70
cadc804
Sun May 15 19:00:51 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
dd558d3
Sun May 15 19:01:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
cf7ab29
Sun May 15 19:10:09 UTC 2022: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:111:13: error: unused variable ‘aux’ [-Werror=unused-variable]
   int i,j,k,aux;
             ^~~
cc1: all warnings being treated as errors
Compilation failed
0d2f209
Sun May 15 19:10:17 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
992ff81
Sun May 15 19:33:13 UTC 2022: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  7|2
total_score: 50/70
aed8b4c
Sun May 15 19:43:03 UTC 2022: 
 sudoku.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
 tests:  7|2
total_score: 50/70
ba8183f
Sun May 15 19:43:55 UTC 2022: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  7|2
total_score: 50/70
eb4027d
Sun May 15 19:57:51 UTC 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
19c5f19
Sun May 15 19:59:56 UTC 2022: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  7|2
total_score: 50/70
3000b03
Sun May 15 20:05:25 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|2
total_score: 50/70
da33738
Sun May 15 20:06:39 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
5c8449f
Sun May 15 20:08:04 UTC 2022: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  7|2
total_score: 50/70
f1b3e12
Sun May 15 20:09:57 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1274a45
Sun May 15 20:10:46 UTC 2022: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  3|3
total_score: 25/70
576e267
Sun May 15 20:11:49 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
76f280f
Sun May 15 20:12:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
8f6d984
Sun May 15 20:14:10 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|3
total_score: 25/70
ca1d227
Sun May 15 20:15:19 UTC 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:88:54: error: expected ‘)’ before ‘ij’
       if(validColum[n->sudo[j][i]] == 0 && n->sudo[j]ij] != 0)
                                                      ^~
sudoku.c:88:56: error: expected statement before ‘]’ token
       if(validColum[n->sudo[j][i]] == 0 && n->sudo[j]ij] != 0)
                                                        ^
sudoku.c:88:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
       if(validColum[n->sudo[j][i]] == 0 && n->sudo[j]ij] != 0)
       ^~
sudoku.c:88:58: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
       if(validColum[n->sudo[j][i]] == 0 && n->sudo[j]ij] != 0)
                                                          ^~
sudoku.c:88:58: error: expected expression before ‘!=’ token
sudoku.c:88:62: error: expected statement before ‘)’ token
       if(validColum[n->sudo[j][i]] == 0 && n->sudo[j]ij] != 0)
                                                              ^
cc1: all warnings being treated as errors
Compilation failed
7364c77
